Atlikta atsiskaitymo uzduotis

--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>BIT atsiskaitymas 2022-01-28</title>
+    <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Get In Touch</h2>
+        <form>
+            <div class="row">
+                <input class="blue-1 half" type="text" placeholder="First Name">
+                <input class="blue-1 half" type="text" placeholder="Last Name">
+            </div>
+            <div class="row">
+                <input class="blue-2 half" type="email" placeholder="Email">
+                <input class="blue-2 half" type="tel" placeholder="Phone">
+            </div>
+            <div class="row">
+                <input class="blue-3 full" type="text" placeholder="Address">
+            </div>
+            <div class="row">
+                <textarea class="blue-4 full">Type your message here</textarea>
+            </div>
+            <div class="button">
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+        <p>Thanks for submitting!</p>
+    </div>
 </body>
 </html>
